--- a/htmls/Wildlife.html
+++ b/htmls/Wildlife.html
@@ -46,8 +46,8 @@
       <li class="dropdown">
         <a class="navw" href="Destinations.html">Destinations</a>
         <ul class="dropdown-content">
-            <li><a  href="Yala_national_Park.html"class="navw">Yala National Park</a></li>
-            <li><a   href="Willpattu_National_Park.html"class="navw">Wilpattu National park</a></li>
+            <li><a  href="https://dc4579.github.io/wdos-assesment-2/htmls/Yala_national_Park.html"class="navw">Yala National Park</a></li>
+            <li><a   href="https://dc4579.github.io/wdos-assesment-2/htmls/Willpattu_National_Park.html"class="navw">Wilpattu National park</a></li>
          </ul>
       </li>
         <li><a class="navw"href="conservation.html">Conservation</a></li>
