--- a/htmls/Willpattu_National_Park.html
+++ b/htmls/Willpattu_National_Park.html
@@ -16,7 +16,7 @@
 <body>  
    
 <section class="grid-container"> 
-    <img src="../img/WilpattuNationalPark-pathways.jpeg" alt="Wallpaper" class="responsive"> 
+    <img src="../img/Wilpattu.avif" alt="Wallpaper wilpatuu" class="responsive"> 
     
    
     <nav id="mySidenav" class="sidenav">
