--- a/htmls/conservation.html
+++ b/htmls/conservation.html
@@ -53,7 +53,7 @@
         </ul>
     </nav>
       <figure class="logo">
-          <img src="../img/WildLife transparent new.png" alt="Logo " >
+          <img src="../img/logo.png" alt="Logo " >
           </figure>
          <section class="wrapper">
             <header class="header"></header>
