--- a/htmls/Yala_national_Park.html
+++ b/htmls/Yala_national_Park.html
@@ -56,7 +56,7 @@
       </ul>
   </nav>
     <figure class="logo">
-        <img src="../img/WildLife transparent new.png" alt="Logo " >
+       <img src="../img/logo.png" alt="Logo " >
         </figure>
 
      
